[package]
name = "thid"
version = "0.0.2"
edition = "2024"
description = "No-std, no-alloc thread IDs and thread-locals."
repository = "https://github.com/tedsta/thid"
documentation = "https://docs.rs/thid"
keywords = ["thread", "thread-local"]
categories = ["concurrency", "data-structures"]
license = "MIT"
readme = "README.md"

[features]
default = ["std"]
std = []
test = []

[dev-dependencies]
core_affinity = "0.8"
criterion = "0.4"

[[bench]]
name = "benches"
harness = false
required-features = ["test"]
